# traceotter-python-sdk

./: LICENSE  README.md  pyproject.toml
.cursor/rules/: commit-prefix.mdc
traceotter/: __init__.py  experiment.py  logger.py  media.py  model.py  openai.py  types.py
traceotter/_client/: attributes.py  client.py  constants.py  datasets.py  environment_variables.py  get_client.py  observe.py  resource_manager.py  span.py  span_processor.py  utils.py
traceotter/_task_manager/: media_manager.py  media_upload_consumer.py  score_ingestion_consumer.py
traceotter/_utils/: __init__.py  error_logging.py  ingest_schema.py  parse_error.py  prompt_cache.py  request.py  serializer.py
traceotter/api/: README.md  client.py  reference.md
traceotter/api/core/: client_wrapper.py
traceotter/api/resources/annotation_queues/: client.py
traceotter/api/resources/blob_storage_integrations/: client.py
traceotter/api/resources/comments/: client.py
traceotter/api/resources/dataset_items/: client.py
traceotter/api/resources/dataset_run_items/: client.py
traceotter/api/resources/datasets/: client.py
traceotter/api/resources/health/: client.py
traceotter/api/resources/ingestion/: client.py
traceotter/api/resources/llm_connections/: client.py
traceotter/api/resources/media/: client.py
traceotter/api/resources/metrics/: client.py
traceotter/api/resources/models/: client.py
traceotter/api/resources/observations/: client.py
traceotter/api/resources/organizations/: client.py
traceotter/langchain/: CallbackHandler.py  utils.py
(+27 files in other folders)
